--- a/composer.json
+++ b/composer.json
@@ -18,44 +18,19 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0",
-        "orchestra/testbench": "^7.0",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5"
+        "illuminate/contracts": "^9.0",
+        "illuminate/support": "^9.0"
     },
     "autoload": {
         "psr-4": {
-            "Desilva\\FilamentSimpleHighlightField\\": "src",
-            "Desilva\\FilamentSimpleHighlightField\\Database\\Factories\\": "database/factories"
+            "Desilva\\FilamentSimpleHighlightField\\": "src"
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Desilva\\FilamentSimpleHighlightField\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
-    },
-    "config": {
-        "sort-packages": true
     },
     "extra": {
         "laravel": {
             "providers": [
                 "Desilva\\FilamentSimpleHighlightField\\FilamentSimpleHighlightFieldServiceProvider"
-            ],
-            "aliases": {
-                "FilamentSimpleHighlightField": "Desilva\\FilamentSimpleHighlightField\\Facades\\FilamentSimpleHighlightField"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
